force-app/main/default/objects/GitHub_Pull_Request__x/GitHub_Pull_Request__x.object-meta.xml
<CustomObject>
    <description>GitHub Pull Request</description>
    <externalDataSource>GitHub_Data_Source</externalDataSource>
    <externalName>GitHub Pull Request</externalName>
    <label>GitHub Pull Request</label>
    <pluralLabel>GitHub Pull Requests</pluralLabel>
</CustomObject>