force-app/main/default/objects/GitHub_Pull_Request__x/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <description>Body</description>
    <externalDeveloperName>Body</externalDeveloperName>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>