force-app/main/default/objects/GitHub_Pull_Request__x/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>Created Date</description>
    <externalDeveloperName>Created_Date</externalDeveloperName>
    <label>Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>