force-app/main/default/objects/GitHub_Pull_Request__x/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <description>Created Date</description>
    <externalDeveloperName>CreatedDate</externalDeveloperName>
    <label>Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>