force-app/main/default/objects/GitHub_Pull_Request__x/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Draft</description>
    <externalDeveloperName>Draft</externalDeveloperName>
    <label>Draft</label>
    <type>Checkbox</type>
</CustomField>