force-app/main/default/objects/GitHub_Pull_Request__x/fields/Merged_Date__c.field-meta.xml
<CustomField>
    <fullName>Merged_Date__c</fullName>
    <description>Merged Date</description>
    <externalDeveloperName>Merged_Date</externalDeveloperName>
    <label>Merged Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>