force-app/main/default/objects/GitHub_Pull_Request__x/fields/MergedDate__c.field-meta.xml
<CustomField>
    <fullName>MergedDate__c</fullName>
    <description>Merged Date</description>
    <externalDeveloperName>MergedDate</externalDeveloperName>
    <label>Merged Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>