force-app/main/default/objects/GitHub_Pull_Request__x/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <description>Owner</description>
    <externalDeveloperName>Owner</externalDeveloperName>
    <label>Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>