force-app/main/default/objects/GitHub_Pull_Request__x/fields/PRCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>PRCreatedDate__c</fullName>
    <description>PR Created Date</description>
    <externalDeveloperName>PRCreatedDate</externalDeveloperName>
    <label>PR Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>