force-app/main/default/objects/GitHub_Pull_Request__x/fields/PRUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>PRUpdatedDate__c</fullName>
    <description>PR Updated Date</description>
    <externalDeveloperName>PRUpdatedDate</externalDeveloperName>
    <label>PR Updated Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>