force-app/main/default/objects/GitHub_Pull_Request__x/fields/Pull_Request_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_Created_Date__c</fullName>
    <description>PR Created Date</description>
    <externalDeveloperName>Pull_Request_Created_Date</externalDeveloperName>
    <label>PR Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>