force-app/main/default/objects/GitHub_Pull_Request__x/fields/Pull_Request_URL__c.field-meta.xml
<CustomField>
    <fullName>Pull_Request_URL__c</fullName>
    <description>Pull_Request_URL</description>
    <externalDeveloperName>Pull_Request_URL</externalDeveloperName>
    <label>Pull Request Url</label>
    <type>Url</type>
</CustomField>