force-app/main/default/objects/GitHub_Pull_Request__x/fields/RepoName__c.field-meta.xml
<CustomField>
    <fullName>RepoName__c</fullName>
    <description>Repo Name</description>
    <externalDeveloperName>RepoName</externalDeveloperName>
    <label>Repo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>