force-app/main/default/objects/GitHub_Pull_Request__x/fields/Repository_Name__c.field-meta.xml
<CustomField>
    <fullName>Repository_Name__c</fullName>
    <description>Repo Name</description>
    <externalDeveloperName>Repository_Name</externalDeveloperName>
    <label>Repo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>