force-app/main/default/objects/GitHub_Pull_Request__x/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State</description>
    <externalDeveloperName>State</externalDeveloperName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>