force-app/main/default/objects/GitHub_Pull_Request__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Number__c</columns>
    <columns>DisplayUrl</columns>
    <columns>RepoName__c</columns>
    <columns>State__c</columns>
    <columns>Title__c</columns>
    <columns>Owner__c</columns>
    <columns>Merged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>