force-app/main/default/objects/GitHub_Pull_Request__x/listViews/Open_Pull_Requests.listView-meta.xml
<ListView>
    <fullName>Open_Pull_Requests</fullName>
    <columns>Number__c</columns>
    <columns>PullRequestURL__c</columns>
    <columns>RepoName__c</columns>
    <columns>State__c</columns>
    <columns>Title__c</columns>
    <columns>Owner__c</columns>
    <columns>Merged__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>open</value>
    </filters>
    <label>Open Pull Requests</label>
</ListView>